--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ isort==5.11.4
 mypy==0.991
 mypy-extensions==0.4.3
 Pillow==9.2.0
-psycopg2==2.9.5
+#psycopg2==2.9.5 #для windows или slim buster image
 pycodestyle==2.10.0
 sqlparse==0.4.3
 tomli==2.0.1
