--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 asgiref==3.5.2
 Django==4.1.2
 django-crispy-forms==1.14.0
+django-filter==22.1
 django_debug_toolbar==3.8.1
+djangorestframework==3.14.0
 isort==5.11.4
+Markdown==3.4.1
 mypy==0.991
 mypy-extensions==0.4.3
 Pillow==9.2.0
 #psycopg2==2.9.5 #для windows или slim buster image
 pycodestyle==2.10.0
+pytz==2022.7.1
 sqlparse==0.4.3
 tomli==2.0.1
 typing_extensions==4.4.0
