--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ Markdown==3.4.1
 mypy==0.991
 mypy-extensions==0.4.3
 Pillow==9.2.0
-#psycopg2==2.9.5 #для windows или slim buster image
+psycopg2==2.9.5 #для windows или slim buster image
 pycodestyle==2.10.0
 pytz==2022.7.1
 sqlparse==0.4.3
