--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,23 @@ services:
       - "8000:8000"
     volumes:
       - ./djangoshop:/djangoshop
+    environment:
+      - DB_HOST=database
+      - DB_NAME=dbname
+      - DB_USER=dbuser
+      - DB_PASS=pass
 
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
+    
+    depends_on:
+      - database
+  
+  database:
+    image: postgres:15-alpine
+    ports:
+      - "5433:5432"
+    environment:
+      - POSTGRES_DB=dbname
+      - POSTGRES_USER=dbuser
+      - POSTGRES_PASSWORD=pass
