--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - DB_NAME=dbname
       - DB_USER=dbuser
       - DB_PASS=pass
+      - SECRET_KEY=6&hlkjk&gvso4j)&a0()u_pi^*)m2x!a44ko$og(3a&cp05d+-
 
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
