--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,20 @@ services:
       - POSTGRES_DB=dbname
       - POSTGRES_USER=dbuser
       - POSTGRES_PASSWORD=pass
+  
+  redis:
+    image: redis:7.0.6-alpine
+    hostname: redis
+
+  worker:
+    build:
+      context: .
+    hostname: worker
+    entrypoint: celery
+    command: -A celery_app.app worker --loglevel=info
+    volumes:
+      - ./djangoshop:/djangoshop
+    links: 
+      - redis
+    depends_on:
+      - redis
