--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,3 +44,18 @@ services:
       - redis
     depends_on:
       - redis
+
+  flower:
+    build:
+      context: .
+    hostname: flower
+    entrypoint: celery
+    command: -A celery_app.app flower 
+    volumes:
+      - ./djangoshop:/djangoshop
+    links: 
+      - redis
+    depends_on:
+      - redis
+    ports:
+      - "5555:5555"
