--- a/docker-compose-git.yml
+++ b/docker-compose-git.yml
@@ -16,6 +16,8 @@ services:
       - EMAIL_HOST=smtp.gmail.com
       - EMAIL_PORT=465
       - EMAIL_USE_SSL=True
+      - EMAIL_HOST_USER=flekso.channel@gmail.com
+      - EMAIL_HOST_PASSWORD=ppqlgcwrkzqeedmf
 
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
@@ -48,6 +50,19 @@ services:
       - redis
     depends_on:
       - redis
+      - database
+    environment:
+      - DB_HOST=database
+      - DB_NAME=dbname
+      - DB_USER=dbuser
+      - DB_PASS=pass
+      - SECRET_KEY=6&hlkjk&gvso4j)&a0()u_pi^*)m2x!a44ko$og(3a&cp05d+-
+      - EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+      - EMAIL_HOST=smtp.gmail.com
+      - EMAIL_PORT=465
+      - EMAIL_USE_SSL=True
+      - EMAIL_HOST_USER=flekso.channel@gmail.com
+      - EMAIL_HOST_PASSWORD=ppqlgcwrkzqeedmf
 
   flower:
     build:
